k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jeopardy
  namespace: jeopardy
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jeopardy
  namespace: jeopardy
subsets:
  - addresses:
      - ip: 192.168.100.15
    ports:
      - name: web
        port: 3001
